# rust-bmi-app-3

./: .slugignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Procfile  QUICKSTART.md  README.md
docs/: 00_techno_overview.md  01_QUICKSTART.md  02_DEPLOYMENT.md  03_PROJECT_SUMMARY.md
src/: main.rs
